--- a/pcapp/src/components/index/index.css
+++ b/pcapp/src/components/index/index.css
@@ -113,7 +113,7 @@
     display: block;
     flex-grow: 1;
 }
-/* 通用样式、头部 */
+/* 通用样式 */
 h1, h2, h3, h4, h5, h6, p{
     margin:0px !important;
     padding:0px !important;
@@ -123,6 +123,12 @@ h1, h2, h3, h4, h5, h6, p{
 }
 .fontSize14{
     font-size: 14px;
+}
+.fontSize15{
+    font-size: 15px;
+}
+.fontSize18{
+    font-size: 18px;
 }
 .clearfix{
     clear: both;
@@ -147,7 +153,13 @@ h1, h2, h3, h4, h5, h6, p{
     color:#fff;
     margin-left:40px;
 }
-
+.icon-index{
+    width:16px;
+    height:16px;
+    display: inline-flex;
+    vertical-align: sub;
+    margin-right:8px;
+}
 /* 底部 page-number */
 .ant-pagination-prev .ant-pagination-item-link, .ant-pagination-next .ant-pagination-item-link {
     border: 1px solid #008c7a !important;
@@ -157,6 +169,7 @@ h1, h2, h3, h4, h5, h6, p{
     border: 1px solid #008c7a !important;
     background-color: #009b87 !important;
 }
+
 .ant-pagination-disabled a, .ant-pagination-disabled:hover a, .ant-pagination-disabled:focus a, .ant-pagination-disabled .ant-pagination-item-link, .ant-pagination-disabled:hover .ant-pagination-item-link, .ant-pagination-disabled:focus .ant-pagination-item-link ,.ant-pagination-prev a, .ant-pagination-next a {
     border-color: #d9d9d9;
     color: #fff !important;
@@ -233,7 +246,348 @@ h1, h2, h3, h4, h5, h6, p{
 }
 .ant-pagination {
     text-align: center;
-    padding:20px 0px !important;
+    padding:25px 0px !important;
     background-color: #fff;
 }
+/* 病人列表-病人信息 */
+/* content */
+.content-box{
+    margin:10px;
+    padding:0px 15px 30px 15px;
+    border-radius: 4px;
+    background-color: #fff;
+}
+.content h2{
+    color:#222;
+    font-size: 22px;
+    font-weight: 400;
+    border-bottom: 1px solid #008c7a;
+    padding:8px 10px !important;
+}
+.content h2 span{
+    font-size: 22px;
+    margin-left:10px;
+}
+.content h2 button{
+    float: right;
+    width: 24px;
+    height: 24px;
+    margin-top:3px;
+}
+.content h2 img{
+    width: 24px;
+    height: 24px;
+}
+.content ul{
+    padding:15px 10px !important;
+}
+.content.assess ul{
+    border-bottom:1px solid #008c7a;
+}
+.content ul li{
+    width:50%;
+    float: left;
+    color:#363636;
+    font-size: 14px;
+    line-height: 36px;
+}
+.content ul li .on{
+    color:#e60012;
+}
+.content.assess ul li{
+    width:33.3%;
+}
+.ant-btn-edit{
+    margin: auto;
+    margin-top:40px;
+    width:38%;
+    text-align: center;
+    padding: 8px 0px;
+    color:#fff;
+    font-size: 18px;
+    background: #008c7a !important;
+    display: table;
+    border-radius: 30px;
+}
+.ant-btn-edit.blue{
+    margin-top:10px;
+    background: #0084bf !important;
+}
+.ant-btn-edit.gray{
+    margin-top:10px;
+    color: #555;
+    background: #bbb !important;
+}
+.assess-btn-box{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+}
+.assess-btn-box .assess-btn{
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    flex: 1;
+    text-align: center;
+}
+.assess-btn-box .assess-btn button{
+    margin: 15px 5px;
+    padding: 0 20%;
+    background-color: #bbb !important;
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    color: #fff;
+    border-radius:20px;
+}
+.assess-btn-box .assess-btn button.on{
+    background-color: #009B86 !important;
+}
+.record{
+    color:#000;
+    font-size: 17px;
+}
+.record .ant-btn{
+    color:#fff;
+    background-color: #0084bf !important;
+    border-radius: 15px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 13px;
+}
+.record-box ul li{
+    font-size: 14px;
+    color: #555;
+    width:100%;
+    padding:10px;
+    background-color: #f9f9f9;
+}
+.record-box ul li:nth-child(2n){
+    background-color: #fff;
+}
+.record-box ul li span{
+    font-size: 13px;
+    color: #666;
+    width:25%;
+    display: inline-block;
+    text-align: center;
+}
+/* 数据统计页面 */
+.datastat-chart{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+}
+.datastat-chart .chart{
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    flex: 1; 
+    color:#fff;
+    text-align: center;
+    width:33.3%;
+    margin:20px;
+    padding:26px 18px;
+}
+.datastat-chart .chart img{
+    width:60%;
+    padding:10px 0px 20px 0px;
+}
+.datastat-chart .chart h1{
+    font-size: 32px;
+    height:56px;
+    border-bottom:1px solid #fff;
+}
+.datastat-chart .chart .num{
+    font-size: 20px;
+    height:48px;
+    line-height:48px;
+}
+.datastat-chart .chart .total-num{
+    font-size: 16px;
+    line-height:26px;
+}
+.datastat-chart .chart.chart-one{
+    background-image: -moz-linear-gradient( 30deg, rgb(240,130,1) 0%, rgb(245,173,1) 100%);
+    background-image: -webkit-linear-gradient( 30deg, rgb(240,130,1) 0%, rgb(245,173,1) 100%);
+    background-image: -ms-linear-gradient( 30deg, rgb(240,130,1) 0%, rgb(245,173,1) 100%); 
+    box-shadow: 0px 8px 12px 0px rgba(213, 213, 213, 0.36);
+    border-radius: 10px;
+}
+.datastat-chart .chart.chart-two{
+    background-image: -moz-linear-gradient( 30deg, rgb(226,41,66) 0%, rgb(236,60,98) 100%);
+    background-image: -webkit-linear-gradient( 30deg, rgb(226,41,66) 0%, rgb(236,60,98) 100%);
+    background-image: -ms-linear-gradient( 30deg, rgb(226,41,66) 0%, rgb(236,60,98) 100%); 
+    box-shadow: 0px 8px 12px 0px rgba(213, 213, 213, 0.36);
+    border-radius: 10px;
+}
+.datastat-chart .chart.chart-three{
+    background-image: -moz-linear-gradient( 30deg, rgb(0,107,178) 0%, rgb(0,157,204) 100%);
+    background-image: -webkit-linear-gradient( 30deg, rgb(0,107,178) 0%, rgb(0,157,204) 100%);
+    background-image: -ms-linear-gradient( 30deg, rgb(0,107,178) 0%, rgb(0, 156, 204) 100%); 
+    box-shadow: 0px 8px 12px 0px rgba(213, 213, 213, 0.36);
+    border-radius: 10px;  
+}
+/* 评估-智能设备【运行】 */
+.device-info .device-name{
+    font-size: 18px;
+    color:#000;
+    font-weight: 400;
+}
+.device-info .device-name{
+    font-size: 18px;
+    color:#000;
+    font-weight: 400;
+}
+.device-info span{
+    font-size: 14px;
+    color:#888;
+    margin-right: 40px;
+    line-height: 60px;
+}
+.device-info span font{
+    color:#009b87;
+}
+.device-info span .warn-color{
+    color:#f39800;
+}
+.device-tittle{
+    background-color: #f9f9f9;
+    color:#222;
+    font-size: 14px;
+    padding:8px 20px;
+}
+.device-content img{
+    display: block;
+    width:78px;
+    height:78px;
+    margin: 10px auto;
+}
+.device-content{
+    padding:20px 0px;
+}
+.device-content p{
+    display: block;
+    text-align: center;
+    color: #222;
+    font-size: 13px;
+    height: 50px;
+    white-space: normal;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding:2px 10px 10px 10px !important;
+}
+.device-indicator{
+    float: left;
+    width:64%;
+}
+.device-indicator div{
+    float: left;
+    width:25%;
+    box-sizing: border-box;
+    text-align: center;
+}
+.device-button{
+    float: right;
+    width:32%;
+    margin-left: 4%;
+}
+.device-button div{
+    float: left;
+    width:50%;
+    box-sizing: border-box;
+    text-align: center;
+}
+/* 自定义翻身 */
+.elastic{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: flex;
+}
+.elastic.border-bottom{
+    padding:30px 0px;
+    border-bottom:1px dashed #bbb;
+    margin-bottom: 20px;
+}
+.elastic.padding{
+    padding:15px 24%;
+}
+.elastic .define{
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    flex: 1;
+}
+.elastic .define.second{
+    flex: initial;
+    width:38%;
+    padding-left: 4%;
+}
+.define{
+    color:#0084bf;
+}
+.define button{
+    float: left;
+}
+.define input{
+    border:0px;
+    background-color: transparent;
+    border-bottom:1px solid #676767;
+    width:70%;
+    color:#333;
+}
+.define .ant-btn-edit{
+    margin: auto;
+    width:43%;
+    text-align: center;
+    padding:6px 0px;
+    font-size: 12px;
+    display: table;
+    border-radius: 15px;
+    margin-top:10px;
+    margin-right: 10px;
+}
+.define .ant-btn-edit.gray{
+    color:#222;
+    background: #bbb !important;
+}
+.define .ant-btn-edit.orange{
+    color:#fff;
+    background: #f39800 !important;
+}
+.define .input-box{
+    margin-top:18px;
+}
+.elastic .define.second .ant-btn-edit{
+    width:26%;
+}
+.define-result p{
+    color:#333;
+    font-size: 16px;
+    text-align: center;
+    letter-spacing: 1px;
+}
+.define-result img{
+    width:19px;
+    height:14px;
+    vertical-align: middle;
+    display: inline-flex;
+    margin:0px 15px 2px 15px;
+}
+.define-sum{
+    margin: 30px 0px;
+    text-align: center;
+    color:#555;
+    font-size: 14px;
+}
+.define-sum .sum{
+    color:#0084bf;
+    font-size: 17px;
+    margin-bottom: 10px !important;
+}
+.define-sum .sum span{
+    color:#f39800;
+    font-size: 22px;
+    border-bottom: 1px solid #ddd;
+}
+
+
+
 
