--- a/pcapp/src/components/index/index.css
+++ b/pcapp/src/components/index/index.css
@@ -247,19 +247,19 @@ input{
 }
 .module-top,.moduleTop h2,.moduleTop h2 span{
     color:#fff;
-} 
+}
 .module-top{
     padding:7px 10px;
     background-color: #009b87;
-} 
+}
 .module-top h2{
     font-size:15px;
     color:#fff;
-} 
+}
 .module-top h2 span{
     font-size:17px;
     margin-left: 10px;
-} 
+}
 .ant-btn-details {
     padding: 0;
     font-size: 14px;
@@ -272,14 +272,14 @@ input{
 .module-bottom{
     padding:7px 10px;
     color:#666;
-} 
+}
 .module-bottom .state{
     padding:0px 3px;
     border-radius: 3px;
     color:#fff;
     background-color: #009b87;
     margin-right: 4px;
-} 
+}
 .ant-btn-assess {
     padding: 0;
     font-size: 14px;
@@ -401,6 +401,9 @@ input{
     line-height: 30px;
     font-size: 13px;
 }
+.record-box {
+  padding-top: 25px;
+}
 .record-box ul li{
     font-size: 14px;
     color: #555;
@@ -427,7 +430,7 @@ input{
 .datastat-chart .chart{
     -webkit-box-flex: 1;
     -webkit-flex: 1;
-    flex: 1; 
+    flex: 1;
     color:#fff;
     text-align: center;
     width:33.3%;
@@ -455,23 +458,23 @@ input{
 .datastat-chart .chart.chart-one{
     background-image: -moz-linear-gradient( 30deg, rgb(240,130,1) 0%, rgb(245,173,1) 100%);
     background-image: -webkit-linear-gradient( 30deg, rgb(240,130,1) 0%, rgb(245,173,1) 100%);
-    background-image: -ms-linear-gradient( 30deg, rgb(240,130,1) 0%, rgb(245,173,1) 100%); 
+    background-image: -ms-linear-gradient( 30deg, rgb(240,130,1) 0%, rgb(245,173,1) 100%);
     box-shadow: 0px 8px 12px 0px rgba(213, 213, 213, 0.36);
     border-radius: 10px;
 }
 .datastat-chart .chart.chart-two{
     background-image: -moz-linear-gradient( 30deg, rgb(226,41,66) 0%, rgb(236,60,98) 100%);
     background-image: -webkit-linear-gradient( 30deg, rgb(226,41,66) 0%, rgb(236,60,98) 100%);
-    background-image: -ms-linear-gradient( 30deg, rgb(226,41,66) 0%, rgb(236,60,98) 100%); 
+    background-image: -ms-linear-gradient( 30deg, rgb(226,41,66) 0%, rgb(236,60,98) 100%);
     box-shadow: 0px 8px 12px 0px rgba(213, 213, 213, 0.36);
     border-radius: 10px;
 }
 .datastat-chart .chart.chart-three{
     background-image: -moz-linear-gradient( 30deg, rgb(0,107,178) 0%, rgb(0,157,204) 100%);
     background-image: -webkit-linear-gradient( 30deg, rgb(0,107,178) 0%, rgb(0,157,204) 100%);
-    background-image: -ms-linear-gradient( 30deg, rgb(0,107,178) 0%, rgb(0, 156, 204) 100%); 
+    background-image: -ms-linear-gradient( 30deg, rgb(0,107,178) 0%, rgb(0, 156, 204) 100%);
     box-shadow: 0px 8px 12px 0px rgba(213, 213, 213, 0.36);
-    border-radius: 10px;  
+    border-radius: 10px;
 }
 /* 评估-智能设备【运行】 */
 .device-info .device-name{
@@ -650,7 +653,7 @@ input{
     margin-left: 15px;
 }
 .lapseto button img{
-    width:20px; 
+    width:20px;
     height:20px;
     margin:0px 5px 5px 0px;
 }
@@ -797,19 +800,19 @@ form input[type="radio"], form input[type="checkbox"] {
 }
 .wound-surface-form table{
     width: 100%;
-} 
+}
 .wound-surface-form table tr input{
     width:24%;
     border:0px !important;
     background-color: transparent !important;
     border-bottom:1px solid #676767 !important;
-} 
+}
 .wound-surface-form table tr td{
     text-align: center;
     padding: 10px 0px;
     line-height: 20px;
     font-size: 12px;
-} 
+}
 .wound-surface-form tr:nth-child(2n+1) {
     background: #f9f9f9;
 }
@@ -851,7 +854,7 @@ form input[type="radio"], form input[type="checkbox"] {
     float: right;
 }
 .printing-title button img{
-    width:20px; 
+    width:20px;
     height:20px;
     margin:0px 5px 5px 0px;
 }
@@ -871,24 +874,24 @@ form input[type="radio"], form input[type="checkbox"] {
     border-right: 0px;
 }
 .nursing-record tr td.white-bg{
-    background-color:#fff; 
-    text-align: left;   
+    background-color:#fff;
+    text-align: left;
 }
 .nursing-record tr:nth-child(2n){
 background-color:#f9f9f9;
 }
 .nursing-record.white-bg .date{
-    background-color:#e4f3f1;    
+    background-color:#e4f3f1;
 }
 .nursing-record.white-bg .date img{
     width:10px;
     height: 10px;
-    margin-right: 10px;   
+    margin-right: 10px;
     margin-bottom: 4px;
 }
 .nursing-record.white-bg .date img.right{
-    margin-right: 0px;   
-    margin-left: 10px;   
+    margin-right: 0px;
+    margin-left: 10px;
 }
 /* 创面评估记录查看 */
 .wound-surface-record{
@@ -1010,5 +1013,3 @@ background-color:#f9f9f9;
     border-bottom:1px solid #ddd;
     padding:10px;
 }
-
-
