--- a/pcapp/src/components/review/reviewlist.css
+++ b/pcapp/src/components/review/reviewlist.css
@@ -48,19 +48,19 @@
 }
 .module-top,.moduleTop h2,.moduleTop h2 span{
     color:#fff;
-} 
+}
 .module-top{
     padding:7px 10px;
     background-color: #009b87;
-} 
+}
 .module-top h2{
     font-size:15px;
     color:#fff;
-} 
+}
 .module-top h2 span{
     font-size:17px;
     margin-left: 10px;
-} 
+}
 .ant-btn-details {
     padding: 0;
     font-size: 14px;
@@ -73,14 +73,14 @@
 .module-bottom{
     padding:7px 10px;
     color:#666;
-} 
+}
 .module-bottom .state{
     padding:0px 3px;
     border-radius: 3px;
     color:#fff;
     background-color: #009b87;
     margin-right: 4px;
-} 
+}
 .ant-btn-assess {
     padding: 0;
     font-size: 14px;
@@ -96,3 +96,8 @@
     background-color: #fff;
 }
 
+.ant-radio-button-wrapper-checked {
+  background: #009B86;
+  border-color: #e8e8e8;
+  color: #fff;
+}
