--- a/pcapp/src/components/evaluate/lapseto.css
+++ b/pcapp/src/components/evaluate/lapseto.css
@@ -13,3 +13,10 @@
     height:20px;
     margin:0px 5px 5px 0px;
 }
+/* 第三部分的修改 */
+input[type="checkbox"]{
+    margin-right: 12px;
+}
+table{
+    width: 100%;
+}
