弹窗按钮样式

--- a/pcapp/src/components/antd-diy.styl
+++ b/pcapp/src/components/antd-diy.styl
@@ -51,3 +51,29 @@
 
 .ant-btn-primary
   background: transparent
+
+.ant-confirm-btns
+  .ant-btn.ant-btn-Default
+    background: button-blue-A
+    border-color: button-blue-B
+    color: #fff;
+    &:hover
+      background: button-blue-A
+      border-color: button-blue-B
+    &:active
+      background: button-blue-B
+    &:focus
+      border-color: button-blue-B
+      color: #fff
+  .ant-btn
+    &:hover
+      background: #b10
+      border-color: #a10
+      color: #fff
+    &:active
+      background: #b00
+      border-color: #a10
+      color: #fff
+    &:focus
+      border-color: inherit
+      color: #fff
